src/test/ui/specialization/min_specialization/repeated_projection_type.stderr
error: cannot specialize on `Binder(ProjectionPredicate(ProjectionTy { substs: [V], item_def_id: DefId(0:6 ~ repeated_projection_type[HASH]::Id::This) }, (I,)), [])`
  --> $DIR/repeated_projection_type.rs:19:1
   |
LL | / impl<I, V: Id<This = (I,)>> X for V {
LL | |
LL | |     fn f() {}
LL | | }
   | |_^

error: aborting due to previous error

